--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<P> "My intro to Git and colab".</P>
+	<P> 'My intro to Git and colab'.</P>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
