--- a/main.html
+++ b/main.html
@@ -4,11 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>"Git".</title>
+	<title>"Git"</title>
 </head>
 
 <body>
-	<P> "My intro to Git and colab".</P>
+	<P> "My intro to Git and colab"</P>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
